--- a/nhis-drug-eda.ipynb
+++ b/nhis-drug-eda.ipynb
@@ -1946,7 +1946,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df 변수에 있는 데이터를 월별로 분할합니다.\n",
+    "df_by_month = {}\n",
+    "for month in df['월'].unique():\n",
+    "    df_by_month[month] = df[df['월'] == month]\n",
+    "\n",
+    "# 월별 데이터를 별도의 시트로 엑셀 파일로 저장합니다.\n",
+    "with pd.ExcelWriter('월별_처방_데이터.xlsx') as writer:\n",
+    "    for month, df_month in df_by_month.items():\n",
+    "        df_month.to_excel(writer, sheet_name=f'월_{month}', index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
