--- a/nhis-drug-eda.ipynb
+++ b/nhis-drug-eda.ipynb
@@ -297,9 +297,7 @@
     "id": "3mF1jT_Q11Jd"
    },
    "source": [
-    "## 데이터 전처리\n",
-    "* 데이터 전처리란 데이터에 적절한 작업을 함으로써 활용하기 좋은 형태로 만드는 것입니다.\n",
-    "* 결측치를 탐색하고 처리하는 것, 적절하지 못한 자료형을 바꾸는 것이 전처리에 포함됩니다."
+    "## 데이터 전처리"
    ]
   },
   {
@@ -1054,7 +1052,7 @@
    },
    "outputs": [],
    "source": [
-    "# 기술 통계를 생성합니다.\n",
+    "# 기초 기술 통계\n",
     "df.describe().T"
    ]
   },
@@ -1545,7 +1543,8 @@
    "source": [
     "## 그룹별 분석\n",
     "### pandas groupby\n",
-    "* <img src = 'https://pandas.pydata.org/docs/_images/06_groupby.svg' width=\"800\">\n",
+    "<img src = 'https://pandas.pydata.org/docs/_images/06_groupby.svg' width=\"800\">\n",
+    "\n",
     "* pandas에서는 DataFrame을 변수의 값에 따라 그룹별로 나눠 분석할 수 있도록 groupby() 메서드를 지원하고 있습니다.\n",
     "* groupby()를 이용하여 데이터를 나눠 분석해보겠습니다."
    ]
