--- a/nhis-drug-eda.ipynb
+++ b/nhis-drug-eda.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "* 의약품처방정보는 국민건강보험 가입자 중 의약품처방이력이 있는 각 연도별 수진자 100만 명에 대한 기본정보(성, 연령대, 시도코드 등)와 의약품처방전별 개별 의약품에 대한 처방내역(요양개시일자, 1회투약량, 1일투약량, 총투여일수 등)으로 구성된 개방데이터입니다.\n",
     "\n",
-    "* <img src=\"https://i.imgur.com/hsrpJp4.png\">\n",
+    "<img src=\"https://i.imgur.com/hsrpJp4.png\">\n",
     "\n",
     "* 약품일반성분명코드\n",
     "* http://www.hira.or.kr/rf/medicine/getHistoryList.do?pgmid=HIRAA030035020000\n",
@@ -556,6 +556,32 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "HACKB9rdT567"
+   },
+   "source": [
+    "### 파생변수 만들기 - 성별\n",
+    "* \"성별코드\" 변수는 남자, 여자를 숫자로 나타내고 있습니다.\n",
+    "* 남자, 여자로 구분된 새로운 \"gender\" 변수를 선언하겠습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "SZ0fTRJdEYR6"
+   },
+   "outputs": [],
+   "source": [
+    "# 성별 코드에서 1은 남자, 2는 여자를 의미합니다.\n",
+    "# 위의 정보를 반영하는 새로운 dict를 선언하겠습니다.\n",
+    "# map 메서드를 이용하여 성별 정보를 담고 있는 \"gender\" 변수를 선언하겠습니다.\n",
+    "gender_dict = {1 : \"남자\", 2 : \"여자\"}\n",
+    "df[\"성별\"] = df[\"성별코드\"].map(gender_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "3EDzLSqBR5-A"
    },
    "source": [
@@ -831,32 +857,6 @@
     "# map 메서드를 이용해 연령대코드에 해당하는 연령대 정보를 갖는 변수를 만듭니다.\n",
     "df[\"연령대\"] = df[\"연령대코드(5세단위)\"].map(age_dict)\n",
     "df.head(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "HACKB9rdT567"
-   },
-   "source": [
-    "### 파생변수 만들기 - 성별\n",
-    "* \"성별코드\" 변수는 남자, 여자를 숫자로 나타내고 있습니다.\n",
-    "* 남자, 여자로 구분된 새로운 \"gender\" 변수를 선언하겠습니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "SZ0fTRJdEYR6"
-   },
-   "outputs": [],
-   "source": [
-    "# 성별 코드에서 1은 남자, 2는 여자를 의미합니다.\n",
-    "# 위의 정보를 반영하는 새로운 dict를 선언하겠습니다.\n",
-    "# map 메서드를 이용하여 성별 정보를 담고 있는 \"gender\" 변수를 선언하겠습니다.\n",
-    "gender_dict = {1 : \"남자\", 2 : \"여자\"}\n",
-    "df[\"성별\"] = df[\"성별코드\"].map(gender_dict)"
    ]
   },
   {
@@ -1331,9 +1331,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 31일의 데이터가 다른 날짜에 비해 유난히 적은 것을 확인할 수 있습니다.\n",
-    "* 이유가 무엇일까요?\n",
-    "\n",
     "### 요일별 처방수"
    ]
   },
