--- a/nhis-drug-eda.ipynb
+++ b/nhis-drug-eda.ipynb
@@ -1968,7 +1968,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 엑셀 파일의 모든 시트를 불러와서 하나의 데이터프레임으로 합치는 함수\n",
+    "def load_excel_sheets_to_dataframe(file_path):\n",
+    "    # 엑셀 파일에서 모든 시트를 불러옵니다.\n",
+    "    excel_sheets = pd.read_excel(file_path, sheet_name=None)\n",
+    "    \n",
+    "    # 모든 시트를 하나의 데이터프레임으로 합칩니다.\n",
+    "    combined_df = pd.concat(excel_sheets.values(), ignore_index=True)\n",
+    "    \n",
+    "    return combined_df\n",
+    "\n",
+    "# 파일 경로를 지정합니다.\n",
+    "file_path = '월별_처방_데이터.xlsx'\n",
+    "\n",
+    "# 함수를 호출하여 데이터프레임을 생성합니다.\n",
+    "combined_df = load_excel_sheets_to_dataframe(file_path)\n",
+    "combined_df"
+   ]
   },
   {
    "cell_type": "code",
